--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
             <div class="field" id="calc-field">
                 <div class="calc-name" id="name1"></div>
                 <div class="calc-name" id="name2"></div>
+                <p id="remaining-letters-count"></p>
+                <div id="flames"></div>
             </div>
         </div>
         <div class="slide hide-slide" id="out" onclick="hideElem(window.outElem); hideElem(window.calcElem)">out (click to reset)</div>
