--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script src="script/in.js"></script>
     <script src="script/calc.js"></script>
     <script src="script/out.js"></script>
+    <script src="script/reset.js"></script>
 </head>
 <body onload="bodyLoadedAnim(); bodyLoadedScroll(); loadedIn()">
     <noscript>
