--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <link rel="stylesheet" href="style/out.css">
     <script src="script/anim.js"></script>
     <script src="script/scroll.js"></script>
-    <script src="script/in.js"></script>
+    <script src="script/flames-btn-clicked.js"></script>
     <script src="script/calc.js"></script>
     <script src="script/out.js"></script>
     <script src="script/reset.js"></script>
 </head>
-<body onload="bodyLoadedAnim(); bodyLoadedScroll(); loadedIn()">
+<body onload="bodyLoadedAnim(); bodyLoadedScroll();">
     <noscript>
         <style>
             #main {
