--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     <div id="main">
         <div class="slide show-slide" id="in">
             <div class="field" id="input-field" onload="">
-                <input type="text" id="your-name" placeholder="Your Name" maxlength="20">
-                <input type="text" id="crush-name" placeholder="Crush Name" maxlength="20">
+                <input type="text" id="your-name" placeholder="Your Name" maxlength="20" autocomplete="off" spellcheck="false" autofocus="true">
+                <input type="text" id="crush-name" placeholder="Crush Name" maxlength="20" autocomplete="off" spellcheck="false">
                 <button id="flames-btn" onclick="flamesButtonClicked()">FLAMES</button>
             </div>
         </div>
