--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
     <script src="script/calc.js"></script>
     <script src="script/out.js"></script>
     <script src="script/reset.js"></script>
+    <script src="script/in.js"></script>
 </head>
-<body onload="bodyLoadedAnim(); bodyLoadedScroll();">
+<body onload="bodyLoadedAnim(); bodyLoadedScroll(); bodyLoadedIn();">
     <noscript>
         <style>
             #main {
