Handle specific case: 0 letter difference between the 2 names Fixes #3

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                 <div class="calc-name" id="name1"></div>
                 <div class="calc-name" id="name2"></div>
                 <p id="remaining-letters-count"></p>
+                <p id="remaining-letters-special-case-msg">All letters got canceled! Since the periodicity of FLAMES is 60, <br><br> 62 => 2 <br> 61 => 1 <br> 60 => 0 <br><br> Therefore, 0 has the same result as 60.</p>
                 <div id="flames"></div>
             </div>
         </div>
