--- a/index.html
+++ b/index.html
@@ -46,7 +46,10 @@
             <div class="field" id="output-field">
                 <p id="result"></p>
                 <p id="comment"></p>
-                <button id="reset-btn" onclick="reset()">Reset</button>
+                <div id="out-btns-container">
+                    <button class="out-btn" id="reset-btn" onclick="reset()">Reset</button>
+                    <button class="out-btn" id="replay-btn" onclick="replay()">Replay</button>
+                </div>
             </div>
         </div>
     </div>
