--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                 <p id="remaining-letters-count"></p>
                 <p id="remaining-letters-special-case-msg">All letters got canceled! Since the periodicity of FLAMES is 60, <br><br> 62 => 2 <br> 61 => 1 <br> 60 => 0 <br><br> Therefore, 0 has the same result as 60.</p>
                 <div id="flames"></div>
+                <button id="skip-anim-btn" onclick="skipAnim()">Skip Animation</button>
             </div>
         </div>
         <div class="slide hide-slide" id="out">
