--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flames Calculator</title>
+    <meta content="An interactive FLAMES calculator that predicts the relationship between two names - Flames Calculator with animation. Step by step calculation shown." name="description"/>
+    <meta content="FLAMES, calculator, love, crush, animation, prediction, interactive, relationship" name="keywords"/>
     <link rel="stylesheet" href="style/main.css">
     <link rel="stylesheet" href="style/in.css">
     <link rel="stylesheet" href="style/calc.css">
@@ -27,6 +29,8 @@
     </noscript>
     <div id="main">
         <div class="slide show-slide" id="in">
+            <h1>Flames Calculator</h1>
+            <p id="desc">with step-by-step animation</p>
             <div class="field" id="input-field" onload="">
                 <input type="text" id="your-name" placeholder="Your Name" maxlength="20" autocomplete="off" spellcheck="false" autofocus="true">
                 <input type="text" id="crush-name" placeholder="Crush Name" maxlength="20" autocomplete="off" spellcheck="false">
